--- a/styles/globals.css
+++ b/styles/globals.css
@@ -51,7 +51,23 @@ body {
 input[type='date']{
   color:var(--secondary)
 }
+.whatsapp-button {
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  background-color: #25D366;
+  color: white;
+  border-radius: 50%;
+  padding: 15px;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+  z-index: 1000;
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
+}
 
+.whatsapp-button:hover {
+  transform: scale(1.1);
+  box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.2);
+}
 a{
   color:inherit;
   text-decoration: none;
